--- a/ers/student/templates/view_preferences.html
+++ b/ers/student/templates/view_preferences.html
@@ -65,7 +65,7 @@
                     <div id="collapseSlotPriorities" class="accordion-collapse collapse show" data-bs-parent="#slotPriorityAccordion">
                         <div class="accordion-body">
                             {% for priority in slot_priorities %}
-                                <p class="h5">Preference {{ priority.slot_preference }}: Slot {{ priority.preference_index }}</p>
+                                <p class="h5">Preference {{ priority.preference_index }}: Slot {{ priority.slot_preference }}</p>
                             {% endfor %}
                         </div>
                     </div>
