--- a/ers/student/templates/admin_panel.html
+++ b/ers/student/templates/admin_panel.html
@@ -275,7 +275,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form action="{% url 'drequirements' %}" method="POST">
+        <form action="{% url 'dslotpreferences' %}" method="POST">
           {% csrf_token %}
           <div class="form-group mb-3">
             <label for="format" class="form-label">Select Format:</label>
